src/App.css
:root {
  color-scheme: light dark;
}

html.force-light {
  color-scheme: light;
}

html.force-dark {
  color-scheme: dark;
}

body {
   background-color: light-dark(#F25912, #211832);
}

.App {
  text-align: center;
  margin-top: 50px;
}

.nav {
  display: flex;
  flex-direction: row;
  justify-content: end;
  margin: 15px;
}

.nav button{
  background-color: transparent;
  
}

.header {
  background-color: light-dark(rgb(24, 179, 231), rgba(255, 138, 95, 1));
  color: light-dark(white, #e1e1ff);
  text-shadow: -1px -1px 0 black, 1px -1px 0 black, 2px 2px 0 black,
  2px 2px 0 black;
  max-width: 175px;
  margin: auto;
  margin-bottom: 70px;
  border-radius: 50%;
  border: 5px solid light-dark(white, #e1e1ff);
  padding: 15px;
}

.question-card, .start-screen {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.question-text {
  background-color: navy;
  color: white;
  border: 5px solid white;
  padding: 45px;
  width: 500px;
  border-radius: 10px;
}

.answer-buttons {
  margin-top: 50px;
  display: flex;
  flex-direction: column;
}

.answerButton {
  padding: 15px;
  margin-top: 20px;
  background-color: navy;
  border: 4px solid white;
  border-radius: 10px;
  width: 500px;
  color: white;
  font-size: 20px;
  cursor: pointer;
}

.start-screen, .score-card {
  border: 5px solid white;
  border-radius: 10px;
  width: 500px;
  margin: auto;
  padding: 15px;
  color: white;
  background-color: #412B6B;
}

.start-options {
  margin-top: 50px;
  margin: 50px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.start-options label {
  margin-top: 15px;
  font-weight: bold;
}

.start-options select, input {
  margin-left: 10px;
}

.start-button, .replay, .next-button, .recap {
  margin: auto;
  margin-top: 50px;
  border: 2px solid white;
  border-radius: 999px;
  box-shadow: #5E5DF0 0 10px 20px -10px;
  box-sizing: border-box;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 16px;
  font-weight: 700;
  line-height: 24px;
  opacity: 1;
  outline: 2px solid white;
  padding: 8px 18px;
  width: fit-content;
  word-break: break-word;
}

.start-button, .replay, .recap {
  background: #f601e6;
}

.replay, .recap {
  margin: 10px;
}

.next-button {
  background-color: navy;
}

.correct {
  background-color: green;
  box-shadow: 0 0 7px 3px limegreen,
  0 0 10px 7px limegreen;
}

.incorrect {
  background-color: red;
  text-decoration: line-through;
  text-decoration-thickness: 2px;
}

@media only screen 
  and (min-device-width: 768px) 
  and (max-device-width: 1024px) 
  and (-webkit-min-device-pixel-ratio: 1) {

  .header {
    margin-bottom: 20px;
  }

  .question-text {
    padding: 30px;
  }

  .answer-buttons {
    margin-top: 0;
  }

  .progress-bar {
    width: 65%;
  }

  .next-button {
    margin-top: 10px;
  }

  .responsive-recap {
    max-height: 270px;
  }
}

@media only screen
  and (min-width: 425px)
  and (max-width: 834px) {
  
  .App {
    margin-top: 25px;
  }

  .start-screen, .score-card {
    width: 400px;
    padding: 0px;
  }

  .question-text {
    padding: 20px;
    width: 362px;
  }

  .answer-buttons {
    margin-top: 10px;
  }

  .answerButton {
    padding: 11px;
    margin-top: 15px;
    width: 414px;
  }

  .progress-bar {
    margin-top: 15px;
    width: 96%;
  }

  .next-button {
    margin-top: 10px;
  }

  .header {
    margin-bottom: 20px;
  }

  .responsive-recap {
    max-height: 275px;
  }
}

@media only screen and (min-width: 380px) and (max-width: 424px) {
  .header {
    margin-bottom: 15px;
  }

  .start-screen, .score-card {
    width: 375px;
    padding: 0px;
  }

  .question-text {
    padding: 10px;
    width: 350px;
  }

  .answer-buttons {
    margin-top: 5px;
  }

  .answerButton {
    padding: 10px;
    margin-top: 10px;
    width: 375px;
  }

  .next-button {
    margin-top: 10px;
  }

  .responsive-recap {
    max-height: 275px;
  }
}

